# Claude-Communication-Bot

./: .env.example  .gitattributes  .gitignore  HANDOFF.md  LICENSE  README.md  agents.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: agents.py  config.py  handlers.py  main.py  runner.py  storage.py
deploy/: agentbot.service  deploy.sh  setup.sh
skill/: SKILL.md  settings.example.json
skill/scripts/: ask_tg.py  ask_user_question_hook.py  notify_stop.py
src/claude_comm_bot/: __init__.py  api.py  config.py  main.py  models.py  state.py  store.py  telegram_bot.py
tests/: conftest.py  test_api.py  test_state.py
web/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: api.ts  main.ts  style.css  types.ts
web/src/components/: pending-list.ts  routes-card.ts  send-form.ts  status-card.ts  toast.ts
web/tests/: api.test.ts
